# beyond_transformer

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_old.md  SETUP.md  benchmark_results.json  conftest.py  environment.yml  experiments_plan.md  hyperparameter_sweep_results.json  literature_review.md  papers.bib  plot_results.py  proposed_paradigm.md  pyproject.toml  pytest.ini  requirements-experiments.txt  requirements-test.txt  requirements.txt  requirements_maas.txt  run_experiments.py  setup.py  summarize_results.py  test_maas_simple.py  toy_examples.ipynb
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/workflows/: ci.yml  ci.yml.backup
configs/: debug_config.yaml  default_config.json  large_model_config.json  long_training_config.json  pulse_base.yaml  pulse_small.yaml  rtx4090_tinystories.yaml  small_model_config.json  tinystories_small.yaml
data/: README.md
docs/: ARCHITECTURE.md  EXPERIMENTS.md  MAAS.md  README.md  STRUCTURE.md  architectural_diagram.md  benchmark_tasks.md  data_management.md  experiment_results.md  experiments_plan.md  google_comprehensive_benchmark_report.md  google_executive_summary.md  google_presentation_summary.md  google_technical_deep_dive.md  literature_review.md  open_source_survey.md  performance_metrics.md  proposed_paradigm.md  quick_start.md  task_1_1_completion_report.md  task_1_2_completion_report.md  task_2_1_completion_report.md  task_2_2_completion_report.md  task_2_3_completion_report.md  task_3_1_completion_report.md  task_3_2_completion_report.md  task_4_1_completion_report.md  task_4_2_completion_report.md  task_4_3_completion_report.md  task_5_1_completion_report.md  task_5_2_completion_report.md  task_6_1_completion_report.md  task_6_2_completion_report.md
docs/api/: api_reference.md
docs/architecture/: architecture_overview.md
docs/archive/: architectural_diagram.md  architecture_comparison_table.md  benchmark_tasks.md  configuration.md  core_components.md  current_state_literature_review.md  data_management.md  experiments_plan.md  forward_backward_flow.md  installation_and_usage.md  integration_strategy.md  literature_review.md  proposed_paradigm.md  quick_start.md  research_summary_next_steps.md  updated_performance_table.md
docs/sphinx/: conf.py  quickstart.rst
docs/sphinx/api/: benchmarks.rst  core.rst  models.rst  modules.rst  utils.rst
docs/sphinx/architecture/: design.rst  performance.rst
docs/tutorials/: tutorial.md
examples/: README.md  benchmark_example.py  maas_advanced_usage.py  maas_basic_usage.py  maas_example.py  maas_integration_demo.py  maas_server_example.py  performance_example.py  train_lm.py  visualize_states.py
notebooks/: README.md  baseline_comparison.ipynb  getting_started.ipynb  hyperparameter_sweep.ipynb  routing_viz.ipynb  run_baseline_comparison.py  run_hyperparameter_sweep.py  run_routing_viz.py  run_simple_sweep.py  test_viz_functions.py  text_dataset_fixes.py  toy_examples.ipynb
notebooks/debug/: debug_mode_demo.ipynb
notebooks/experiments/: baseline_comparison.ipynb  hyperparameter_sweep.ipynb  routing_viz.ipynb
notebooks/interpretability/: memory_attention_visualization.ipynb  visualization_tools.ipynb
notebooks/research/: nsm_prototype.ipynb
notebooks/scripts/: run_baseline_comparison.py  run_hyperparameter_sweep.py  run_routing_viz.py  run_simple_sweep.py
notebooks/tutorials/: hybrid_attention.ipynb  routing_mechanism.ipynb  state_management.ipynb
references/: papers.bib
requirements/: requirements-experiments.txt  requirements-test.txt  requirements.txt
results/experiments/: baseline_comparison_results.json
scripts/: bench.py  benchmark_pulse.py  download_data.py  performance_measurement.py  preprocess_data.py  run_benchmarks.py  run_maas_demo.py  run_small_tests.py  run_tests.py  smoke_test.py  summarize_results.py  test_best_model.py  train.py  train_large_pulse.py  train_model.py  train_pulse_lm.py  train_pulse_tinystories_hf.py  visualize_results.py
scripts/experiments/: run_experiments.py  summarize_results.py
scripts/visualization/: plot_results.py
src/nsm/: README.md  __init__.py  data_loaders.py  experiment_results.py  state_propagator.py  test_components.py  test_state_propagator.py
src/nsm/benchmarks/: __init__.py  babi_benchmark.py  comprehensive_benchmark.py  lra_benchmark.py  pg19_benchmark.py
src/nsm/core/: __init__.py  components.py  config.py  layers.py
src/nsm/data/: data_loaders.py  synthetic_data.py
src/nsm/experiments/: __init__.py  dynamic_state_allocation.py  experiment_results.py  state_count_sweep.py
src/nsm/models/: __init__.py  hybrid_model.py  simple_nsm.py
src/nsm/modules/: __init__.py  debuggable_components.py  ntm_memory.py  rnn_memory.py  ssm_block.py  state_manager.py  state_propagator.py  test_core_components.py  test_state_propagator.py  transformer_attention.py
src/nsm/tests/: small_scale_tests.py  test_benchmark_components.py  (+6 more)
src/pulse/: README.md  __init__.py  config.py  core.py  model.py  train.py
test_logs/advanced_hybrid_test/: attention_log.json  memory_log.json  metrics.json  states_log.json
test_logs/copy_task_test/: metrics.json
test_logs/sequential_hybrid_test/: metrics.json  states_log.json
test_logs/simple_nsm_test/: metrics.json  states_log.json
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_components_tests.py  smoke_test.py  test_block.py  test_config.py  test_conv.py  test_core.py  test_data_loaders.py  test_delta.py  test_experiment_results.py  test_generation.py  test_hybrid_model.py  test_legacy_compat.py  test_maas.py  test_model.py  test_norm.py  test_nsm_components.py  test_ntm_memory.py  test_rope.py  test_routing_viz.py  test_sequence_nsm.py  test_smoke.py  test_ssm_block.py  test_state_propagator.py  test_swa.py  test_viz_functions.py
tests/components/: __init__.py  test_layers.py  test_router.py  test_state_manager.py
tests/unit/: test_debug_performance.py  test_models.py  test_state_manager.py  test_state_propagator.py  test_visualization.py
(+133 files in other folders)
