[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-ai"
version = "1.0.0"
description = "PULSE - Parallel Unified Linear State Engine"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rei Calasso", email = "reicalasso@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
maas = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
]
train = [
    "datasets>=2.0.0",
    "transformers>=4.30.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/reicalasso/beyond_transformer"
Repository = "https://github.com/reicalasso/beyond_transformer"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]
