[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-ai"
version = "4.0.0"
description = "PULSE — modern hybrid recurrent-attention sequence model (gated delta-rule + sliding-window attention + RoPE)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rei Calasso", email = "reicalasso@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.21.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "datasets>=2.0.0",
    "transformers>=4.30.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/reicalasso/beyond_transformer"
Repository = "https://github.com/reicalasso/beyond_transformer"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pulse*"]

# ─────────────────────────────────────────────────────────────────────────────
# pytest
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ─────────────────────────────────────────────────────────────────────────────
# ruff (lint + format)
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/pulse/legacy", "output", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "N803",   # allow ML-style argument names (X, K, V, ...)
    "N806",   # allow capitalized locals (S, K, V matrices)
    "N812",   # `import torch.nn.functional as F` is a community convention
    "B008",   # function calls in argument defaults (torch.zeros etc.)
    "SIM108", # ternary suggestions can hurt readability
    "RUF002", # unicode in docstrings (math notation: α β × etc. is intentional)
    "RUF003", # unicode in comments (same reason)
    "RUF012", # mutable class attrs
    "RUF059", # unpacked-but-unused tuple element (common for shape unpacking)
    "B905",   # zip(strict=) is verbose for known-length iterables
    "UP007",  # Optional[X] is more readable than X | None in many places
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "N802", "N803", "N806", "F401", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─────────────────────────────────────────────────────────────────────────────
# mypy
# ─────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = ["src/pulse/legacy/.*", "build/.*", ".venv/.*"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["yaml", "datasets", "transformers", "tqdm.*"]
ignore_missing_imports = true
